syntax = "proto3";

package com.arsiu.eduhub.v2.assignmentsvc.output.reqreply.assignment;

option java_multiple_files = true;

import "com/arsiu/eduhub/v2/assignmentsvc/commonmodels/assignment/assignment.proto";

message FindAllAssignmentStreamResponse {
  commonmodels.assignment.AssignmentProto response = 1;
}
